[gd_scene load_steps=12 format=2]

[ext_resource path="res://ui/Instructions.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/ui/PanelBeige.png" type="Texture" id=2]
[ext_resource path="res://ui/options/Options.gd" type="Script" id=3]
[ext_resource path="res://segoeuil.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 100, 100 )
margin_left = 14.0
margin_right = 32.0
margin_top = 25.0
margin_bottom = 29.0

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=5]

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[node name="Options" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -263.0
margin_right = 150.0
margin_bottom = 174.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
custom_constants/separation = -1

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 280.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Options Menu"
align = 1

[node name="WindowSettings" type="Label" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 280.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Window Settings"
align = 1

[node name="Resolutions" type="OptionButton" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 280.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 4 )

[node name="FullscreenToggle" type="CheckButton" parent="VBoxContainer"]
margin_top = 82.0
margin_right = 280.0
margin_bottom = 123.0
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
pressed = true
text = "Fullscreen"

[node name="VolumeSettings" type="Label" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 280.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Volume Settings"
align = 1

[node name="VolumeToggle" type="CheckButton" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 280.0
margin_bottom = 185.0
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
shortcut_in_tooltip = false
pressed = true
text = "Master Volume"

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 184.0
margin_right = 280.0
margin_bottom = 200.0
min_value = -30.0
max_value = 20.0
scrollable = false
ticks_on_borders = true

[node name="BGMToggle" type="CheckButton" parent="VBoxContainer"]
margin_top = 199.0
margin_right = 280.0
margin_bottom = 240.0
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
shortcut_in_tooltip = false
pressed = true
text = "BGM Volume"

[node name="BGMSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 239.0
margin_right = 280.0
margin_bottom = 255.0
min_value = -30.0
max_value = 20.0
scrollable = false
ticks_on_borders = true

[node name="SoundToggle" type="CheckButton" parent="VBoxContainer"]
margin_top = 254.0
margin_right = 280.0
margin_bottom = 295.0
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
shortcut_in_tooltip = false
pressed = true
text = "Sound Volume"

[node name="SoundSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 294.0
margin_right = 280.0
margin_bottom = 310.0
min_value = -30.0
max_value = 20.0
scrollable = false
ticks_on_borders = true

[node name="GameSettings" type="Label" parent="VBoxContainer"]
margin_top = 309.0
margin_right = 280.0
margin_bottom = 332.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game Settings"
align = 1

[node name="PauseToggle" type="CheckButton" parent="VBoxContainer"]
pause_mode = 2
margin_top = 331.0
margin_right = 280.0
margin_bottom = 372.0
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
shortcut_in_tooltip = false
text = "Pause Game"

[node name="InstructionsButton" type="Button" parent="VBoxContainer"]
margin_top = 371.0
margin_right = 280.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 7 )
text = "Read Game Instructions"

[node name="SaveButton" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 399.0
margin_right = 280.0
margin_bottom = 428.0
custom_fonts/font = SubResource( 7 )
text = "Save Game and Go to Title Screen"

[node name="CloseButton" type="Button" parent="."]
margin_left = 260.0
margin_top = 20.0
margin_right = 280.0
margin_bottom = 40.0
text = "X"

[node name="Instructions" parent="." instance=ExtResource( 1 )]
visible = false
margin_left = -330.0
margin_top = -7.0
margin_right = 630.0
margin_bottom = 533.0
[connection signal="item_selected" from="VBoxContainer/Resolutions" to="." method="_on_Resolutions_item_selected"]
[connection signal="pressed" from="VBoxContainer/FullscreenToggle" to="." method="_on_FullscreenToggle_pressed"]
[connection signal="pressed" from="VBoxContainer/VolumeToggle" to="." method="_on_VolumeToggle_pressed"]
[connection signal="value_changed" from="VBoxContainer/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/BGMToggle" to="." method="_on_BGMToggle_pressed"]
[connection signal="value_changed" from="VBoxContainer/BGMSlider" to="." method="_on_BGMSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/SoundToggle" to="." method="_on_SoundToggle_pressed"]
[connection signal="value_changed" from="VBoxContainer/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/PauseToggle" to="." method="_on_PauseToggle_pressed"]
[connection signal="pressed" from="VBoxContainer/InstructionsButton" to="." method="_on_InstructionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
